--- a/carviewer.html
+++ b/carviewer.html
@@ -17,11 +17,11 @@
     </head>
     <body>
         <h1>Cars</h1>
-        <div>
-            <button>Create</button>
+        <div id='createUpdateForm' style="display: none">
+            <button id="showCreateButton">Create</button>
         </div>
         <div>
-            <table class="table">
+            <table class="table" id ="carTable">
                 <tr>
                     <th>reg</th>
                     <th>make</th>
