--- a/carviewer.html
+++ b/carviewer.html
@@ -69,5 +69,13 @@
             <span><button>Create</button></span>
             <span><button>Update</button></span>
         </div>
+
+        <script>
+            function showCreate(){
+                document.getElementById('showCreateButton').style.display="none"
+                document.getElementById('carTable').style.display = "none"
+                document.getElementById('showCreateButton').style.display = "block"
+            }
+        </script>
     </body>
 </html>
