--- a/carviewer.html
+++ b/carviewer.html
@@ -35,7 +35,7 @@
                     <td>Ford</td>
                     <td>Modeo</td>
                     <td>25,000</td>
-                    <td><button>update</button></td>
+                    <td><button onclick="showUpdate(this)">update</button></td>
                     <td><button>delete</button></td>
                 </tr>
                 <tr>
@@ -43,7 +43,7 @@
                     <td>Fiat</td>
                     <td>Punto</td>
                     <td>4,000</td>
-                    <td><button>update</button></td>
+                    <td><button onclick="showUpdate(this)">update</button></td>
                     <td><button>delete</button></td>
                 </tr>
                 <tr>
@@ -51,7 +51,7 @@
                     <td>Nissan</td>
                     <td>Almera</td>
                     <td>500</td>
-                    <td><button>update</button></td>
+                    <td><button onclick="showUpdate(this)">update</button></td>
                     <td><button>delete</button></td>
                 </tr>
             </table>
@@ -74,15 +74,27 @@
             function showCreate(){
                 document.getElementById('showCreateButton').style.display="none"
                 document.getElementById('carTable').style.display = "none"
-                document.getElementById('showCreateButton').style.display = "block"
+                document.getElementById('showUpdateForm').style.display = "block"
 
                 document.getElementById('createLabel').style.display = "inline"
                 document.getElementById('updateLabel').style.display = "none"
 
                 document.getElementById('doCreateButton').style.display = "block"
                 document.getElementById('doUpdateButton').style.display = "none"
-
             }
+
+            function showUpdate(){
+                document.getElementById('showCreateButton').style.display="block"
+                document.getElementById('carTable').style.display = "none"
+                document.getElementById('showUpdateForm').style.display = "none"
+
+                document.getElementById('createLabel').style.display = "none"
+                document.getElementById('updateLabel').style.display = "inline"
+
+                document.getElementById('doCreateButton').style.display = "none"
+                document.getElementById('doUpdateButton').style.display = "block"
+            }
+
         </script>
     </body>
 </html>
