--- a/carviewer.html
+++ b/carviewer.html
@@ -96,6 +96,19 @@
             }
 
             function doCreate(){
+                showViewAll()
+            }
+
+            function showViewAll(){
+                document.getElementById('showCreateButton').style.display = "none"
+                document.getElementById('carTable').style.display = "block"
+                document.getElementById('showUpdateForm').style.display = "block"
+
+                document.getElementById('createLabel').style.display = "inline"
+                document.getElementById('updateLabel').style.display = "none"
+
+                document.getElementById('doCreateButton').style.display = "block"
+                document.getElementById('doUpdateButton').style.display = "none"
 
             }
 
