L2- typo step 7 updated

--- a/carviewer.html
+++ b/carviewer.html
@@ -74,7 +74,7 @@
             function showCreate(){
                 document.getElementById('showCreateButton').style.display="none"
                 document.getElementById('carTable').style.display = "none"
-                document.getElementById('showUpdateForm').style.display = "block"
+                document.getElementById('createUpdateForm').style.display = "block"
 
                 document.getElementById('createLabel').style.display = "inline"
                 document.getElementById('updateLabel').style.display = "none"
@@ -84,9 +84,9 @@
             }
 
             function showUpdate(){
-                document.getElementById('showCreateButton').style.display="block"
+                document.getElementById('showCreateButton').style.display="none"
                 document.getElementById('carTable').style.display = "none"
-                document.getElementById('showUpdateForm').style.display = "none"
+                document.getElementById('createUpdateForm').style.display = "block"
 
                 document.getElementById('createLabel').style.display = "none"
                 document.getElementById('updateLabel').style.display = "inline"
@@ -112,7 +112,7 @@
             function showViewAll(){
                 document.getElementById('showCreateButton').style.display = "none"
                 document.getElementById('carTable').style.display = "block"
-                document.getElementById('showUpdateForm').style.display = "block"
+                document.getElementById('createUpdateForm').style.display = "block"
 
                 document.getElementById('createLabel').style.display = "inline"
                 document.getElementById('updateLabel').style.display = "none"
