--- a/carviewer.html
+++ b/carviewer.html
@@ -105,6 +105,8 @@
                 car.price = form.querySelector('input[name="price"]').value
                 console.log(JSON.stringify(car))
 
+                addCarToTable(car)
+
                 clearForm()
                 showViewAll()
             }
@@ -129,6 +131,24 @@
                 form.querySelector('input[name="make"]').value =''
                 form.querySelector('input[name="model"]').value =''
                 form.querySelector('input[name="price"]').value =''
+            }
+
+            function addCarToTable(car){
+                var tableElement = document.getElementById('carTable')
+                var rowElement = tableElement.insertRow(-1)
+                // set attribute here
+                var cell1 = rowElement.insertCell(0);
+                cell1.innerHTML = car.reg
+                var cell2 = rowElement.insertCell(1);
+                cell2.innerHTML = car.reg
+                var cell3 = rowElement.insertCell(2);
+                cell3.innerHTML = car.reg
+                var cell4 = rowElement.insertCell(3);
+                cell4.innerHTML = car.reg
+                var cell5 = rowElement.insertCell(4);
+                cell5.innerHTML = '<button onclick="showUpdate(this)">update</button>'
+                var cell6 = rowElement.insertCell(5);
+                cell6.innerHTML = '<button onclick="doDelete(this)">delete</button>'
             }
 
         </script>
