--- a/carviewer.html
+++ b/carviewer.html
@@ -100,7 +100,7 @@
 
                 var car = {}
                 car.reg = form.querySelector('input[name="reg"]').value
-                car.make = form.querySelector('input[name="make"]').value
+                car.make = form.querySelector('select[name="make"]').value
                 car.model = form.querySelector('input[name="model"]').value
                 car.price = form.querySelector('input[name="price"]').value
                 console.log(JSON.stringify(car))
