L2- typo step 13 updated

--- a/carviewer.html
+++ b/carviewer.html
@@ -128,7 +128,7 @@
 
                 form.querySelector('input[name="reg"]').disabled = false
                 form.querySelector('input[name="reg"]').value =''
-                form.querySelector('input[name="make"]').value =''
+                form.querySelector('select[name="make"]').value =''
                 form.querySelector('input[name="model"]').value =''
                 form.querySelector('input[name="price"]').value =''
             }
