--- a/carviewer.html
+++ b/carviewer.html
@@ -36,7 +36,7 @@
                     <td>Modeo</td>
                     <td>25,000</td>
                     <td><button onclick="showUpdate(this)">update</button></td>
-                    <td><button>delete</button></td>
+                    <td><button onclick="doDelete(this)">delete</button></td>
                 </tr>
                 <tr id="12 D 123">
                     <td>12 D 123</td>
@@ -44,7 +44,7 @@
                     <td>Punto</td>
                     <td>4,000</td>
                     <td><button onclick="showUpdate(this)">update</button></td>
-                    <td><button>delete</button></td>
+                    <td><button onclick="doDelete(this)">delete</button></td>
                 </tr>
                 <tr id="08 G 123">
                     <td>08 G 123</td>
@@ -52,7 +52,7 @@
                     <td>Almera</td>
                     <td>500</td>
                     <td><button onclick="showUpdate(this)">update</button></td>
-                    <td><button>delete</button></td>
+                    <td><button onclick="doDelete(this)">delete</button></td>
                 </tr>
             </table>
         </div>
@@ -166,7 +166,7 @@
                 return car
             }
 
-            function populateFormWithCar(car) {
+            function populateFormWithCar(car){
                 var form = document.getElementById('createUpdateForm')
                 form.querySelector('input[name="reg"]').disabled = true
 
@@ -176,7 +176,7 @@
                 form.querySelector('input[name="price"]').value = car.price
             }
 
-            function getCarFromForm() {
+            function getCarFromForm(){
                 var form = document.getElementById('createUpdateForm')
                 var car = {}
                 car.reg = form.querySelector('input[name="reg"]').value
@@ -187,7 +187,27 @@
                 return car
             }
 
+            function setCarInRow(rowElement, car){
+                rowElement.cells[0].firstChild.textContent = car.reg
+                rowElement.cells[1].firstChild.textContent = car.make
+                rowElement.cells[2].firstChild.textContent = car.model
+                rowElement.cells[3].firstChild.textContent = car.price
+            }
 
+            function doUpdate(){
+                var car = getCarFromForm();
+                var rowElement = document.getElementById(car.reg)
+                setCarInRow(rowElement,car)
+
+                clearForm()
+                showViewAll()
+            }
+
+            function doDelete(r){
+                var TableElement = document.getElementById('carTable')
+                var index = r.parentNode.parentNode.rowIndex;
+                tableElement.deleteRow(index);
+            }
 
         </script>
     </body>
