--- a/carviewer.html
+++ b/carviewer.html
@@ -142,7 +142,7 @@
             function addCarToTable(car){
                 var tableElement = document.getElementById('carTable')
                 var rowElement = tableElement.insertRow(-1)
-                // set attribute here
+                rowElement.setAttribute('id',car.reg)
                 var cell1 = rowElement.insertCell(0);
                 cell1.innerHTML = car.reg
                 var cell2 = rowElement.insertCell(1);
@@ -155,6 +155,8 @@
                 cell5.innerHTML = '<button onclick="showUpdate(this)">update</button>'
                 var cell6 = rowElement.insertCell(5);
                 cell6.innerHTML = '<button onclick="doDelete(this)">delete</button>'
+
+                
             }
 
             function getCarFromRow(rowElement){
