--- a/week04-json_ajax/Lab03-ajax-readsimple.html
+++ b/week04-json_ajax/Lab03-ajax-readsimple.html
@@ -16,7 +16,9 @@
          "data":"",
          "dataType":"JSON",
          "success":function(result){
-            console.log(result);
+            //console.log(result);
+            var rate = result.bpi.EUR.rate
+            console.log(rate);
          },
          "error": function (xhr,status,error){
             console.log("error: "+status+" msg:"+error);
