L4 step 6 typo in $ corrected

--- a/week04-json_ajax/Lab03-ajax-readsimple.html
+++ b/week04-json_ajax/Lab03-ajax-readsimple.html
@@ -26,7 +26,7 @@
             //console.log(rate);
             document.getElementById("output1").innerText = "€"+rateEUR;
             document.getElementById("output2").innerText = "£"+rateGBP;
-            document.getElementById("output3").innerText = "€"+rateUSD;
+            document.getElementById("output3").innerText = "$"+rateUSD;
          },
          "error": function (xhr,status,error){
             console.log("error: "+status+" msg:"+error);
