--- a/week05-curl-flask-ajax/carviewer5.html
+++ b/week05-curl-flask-ajax/carviewer5.html
@@ -2,7 +2,7 @@
 <!-- Lab 02 -->
 <html>
     <head>
-        <title>View cars</title>
+        <title>View cars 5</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -14,8 +14,9 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
             integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
             crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     </head>
-    <body>
+    <body onload="getAll()">
         <h1>Cars</h1>
         <div>
             <button id="showCreateButton" onclick="showCreate()">Create</button>
@@ -30,7 +31,7 @@
                     <th>Update</th>
                     <th>Delete</th>
                 </tr>
-                <tr id="191 MO 123">
+                <!-- <tr id="191 MO 123">
                     <td>191 MO 123</td>
                     <td>Ford</td>
                     <td>Modeo</td>
@@ -53,7 +54,7 @@
                     <td>500</td>
                     <td><button onclick="showUpdate(this)">update</button></td>
                     <td><button onclick="doDelete(this)">delete</button></td>
-                </tr>
+                </tr> -->
             </table>
         </div>
         <div class="form-group" id='createUpdateForm' style="display: none">
@@ -112,6 +113,7 @@
                 console.log(JSON.stringify(car))
 
                 addCarToTable(car)
+                createCar(car)
 
                 clearForm()
                 showViewAll()
@@ -185,7 +187,7 @@
                 car.make = form.querySelector('select[name="make"]').value
                 car.model = form.querySelector('input[name="model"]').value
                 car.price = form.querySelector('input[name="price"]').value
-                console.log(JSON.stringify(car))
+                // console.log(JSON.stringify(car))
                 return car
             }
 
@@ -198,17 +200,104 @@
 
             function doUpdate(){
                 var car = getCarFromForm();
-                var rowElement = document.getElementById(car.reg)
+
+                var rowElement = document.getElementById(car.reg);
                 setCarInRow(rowElement,car)
+                console.log(car.reg)
+                updateCar(car)
 
                 clearForm()
                 showViewAll()
             }
 
             function doDelete(r){
+                // console.log(r.parentNode.parentNode.firstChild.textContent)
+                var reg = r.parentNode.parentNode.firstChild.textContent
+                deleteCar(reg)
                 var tableElement = document.getElementById('carTable')
                 var index = r.parentNode.parentNode.rowIndex;
                 tableElement.deleteRow(index);
+            }
+
+            function getAll() {
+                $.ajax({
+                    url: "cars",
+                    method: "GET",
+                    data: "",
+                    dataType: "JSON",
+                    contentType: "application/json; charset utf-8",
+                    success: function (result) {
+                        //console.log(result);
+                        for (car of result.cars) {
+                            //console.log(car);
+                            addCarToTable(car)
+                        }
+                    },
+                    error: function (xhr, status, error) {
+                        console.log("error " + status + " msg:" + error);
+                    }
+                });
+            }
+
+            function createCar(car) {
+                // var car = { "reg": "12 D 1234", "make": "Fiat", "model": "Punto", "price": 3000 }
+                console.log(JSON.stringify(car));
+                $.ajax({
+                    url: "cars",
+                    method: "POST",
+                    data: JSON.stringify(car),
+                    dataType: "JSON",
+                    contentType: "application/json; charset utf-8",
+                    success: function (result) {
+                        console.log(result);
+                        
+                        // document.getElementById('output').innerHTML = JSON.stringify(result);
+                    },
+                    error: function (xhr, status, error) {
+                        console.log("error " + status + " msg:" + error);
+                    }
+                });
+            }
+
+            function updateCar(car) {
+                var reg = car.reg;
+                var update = car;
+                delete update["reg"]
+                console.log("update for " + reg + " is " + JSON.stringify(update));
+                // var car = { "reg": "181 G 1234", "make": "Ford", "model": "Modeo", "price": 00 }
+                // console.log(JSON.stringify(car));
+                $.ajax({
+                    url: "cars/" + encodeURI(reg),
+                    method: "PUT",
+                    data: JSON.stringify(update),
+                    dataType: "JSON",
+                    contentType: "application/json; charset utf-8",
+                    success: function (result) {
+                        console.log(result);
+                        // document.getElementById('output').innerHTML = JSON.stringify(result);
+                    },
+                    error: function (xhr, status, error) {
+                        console.log("error " + status + " msg:" + error);
+                    }
+                });
+            }
+
+            function deleteCar(reg) {
+                // var car = { "reg": "12 D 1234" }
+                //console.log(JSON.stringify(car));
+                $.ajax({
+                    url: "cars/" + encodeURI(reg),
+                    method: "DELETE",
+                    data: "",
+                    dataType: "JSON",
+                    success: function (result) {
+                        console.log(result);
+                        // document.getElementById('output').innerHTML = JSON.stringify(result);
+                    },
+                    error: function (xhr, status, error) {
+                        console.log("error " + status + " msg:" + error);
+                    }
+                });
             }
 
         </script>
