--- a/week05-curl-flask-ajax/testgetall.html
+++ b/week05-curl-flask-ajax/testgetall.html
@@ -26,17 +26,7 @@
                //console.log(result);
                for (car of result.cars){
                   //console.log(car);
-                  var tableElement = document.getElementById('carTable')
-                  var rowElement = tableElement.insertRow(-1)
-                  rowElement.setAttribute('id', car.reg)
-                  var cell1 = rowElement.insertCell(0);
-                  cell1.innerHTML = car.reg
-                  var cell2 = rowElement.insertCell(1);
-                  cell2.innerHTML = car.make
-                  var cell3 = rowElement.insertCell(2);
-                  cell3.innerHTML = car.model
-                  var cell4 = rowElement.insertCell(3);
-                  cell4.innerHTML = car.price
+                  addCarToTable(car)
                }
             },
             error:function(xhr,status,error){
@@ -44,6 +34,26 @@
             }
          });
       }
+
+      function addCarToTable(car) {
+            var tableElement = document.getElementById('carTable')
+            var rowElement = tableElement.insertRow(-1)
+            rowElement.setAttribute('id', car.reg)
+            var cell1 = rowElement.insertCell(0);
+            cell1.innerHTML = car.reg
+            var cell2 = rowElement.insertCell(1);
+            cell2.innerHTML = car.make
+            var cell3 = rowElement.insertCell(2);
+            cell3.innerHTML = car.model
+            var cell4 = rowElement.insertCell(3);
+            cell4.innerHTML = car.price
+            var cell5 = rowElement.insertCell(4);
+            cell5.innerHTML = '<button onclick="showUpdate(this)">update</button>'
+            var cell6 = rowElement.insertCell(5);
+            cell6.innerHTML = '<button onclick="doDelete(this)">delete</button>'
+
+
+         }
    </script>
 
 </html>
